overflow issue fixed

--- a/src/index.css
+++ b/src/index.css
@@ -27,9 +27,13 @@ a:hover {
   color: #535bf2;
 }
 
-body {
+
+body, html {
   margin: 0;
+  padding: 0;
+  overflow-x: hidden; 
 }
+
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
